# newsinboundr-db

./: Cargo.toml  LICENSE
migrations/2020-07-11-200000_enums/: down.sql  up.sql
migrations/2020-07-11-202312_source_rss/: down.sql  up.sql
migrations/2020-07-11-202316_source_atom/: down.sql  up.sql
migrations/2020-07-11-202318_source_email/: down.sql  up.sql
migrations/2020-07-11-203642_news/: down.sql  up.sql
migrations/2020-08-09-190025_news_composite_udx/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
src/db/: models.rs  schema.rs
