[package]
name = "newsinboundr-db"
version = "0.1.0"
authors = ["barigorokarl <github@der-schreiber.net>"]
edition = "2018"

[lib]
name = "newsinboundr_db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
diesel-derive-enum = { versions = "1.1.0", features = ["postgres"] }
